--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,19 +2,27 @@
 
     <head>
         <title>My Polls</title>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'polls/style.css' %}">
     </head>
 
     <body>
-        <h1>My Polls</h1>
-        {% if latest_question_list %}
-        <ul>
-            {% for question in latest_question_list %}
-            <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-        <p>No polls are available.</p>
-        {% endif %}
+        <fieldset>
+            <legend>
+                <h1>My Polls</h1>
+            </legend>
+            {% if latest_question_list %}
+            <ul>
+                {% for question in latest_question_list %}
+                <li>
+                    <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <p>No polls are available.</p>
+            {% endif %}
+        </fieldset>
     </body>
 
 </html>
