--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -2,18 +2,23 @@
 
     <head>
         <title>{{ question.question_text }}</title>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'polls/style.css' %}">
     </head>
 
     <body>
-        <h1>{{ question.question_text }}</h1>
 
-        <ul>
+        <fieldset>
+            <legend>
+                <h1>{{ question.question_text }}</h1>
+            </legend>
             {% for choice in question.choice_set.all %}
-            <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+            <p>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</p>
             {% endfor %}
-        </ul>
 
-        <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+        </fieldset>
+
+        <a href="{% url 'polls:detail' question.id %}" class="vote">Vote again?</a>
     </body>
 
 </html>
