--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -4,6 +4,12 @@
         <title>My Polls</title>
         {% load static %}
         <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="../../static/polls/images/mrte64.webp" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Mert Patlar's personal page" />
+        <meta name="keywords" content="Mert Patlar, Mert, Patlar, mrte64, mrte64.github.io, mrte64.github.io/personal_page," />
+        <meta name="author" content="Mert Patlar" />
     </head>
 
     <body>
